force-app/main/default/objects/ucinn_ascendv2__Stock__c/ucinn_ascendv2__Stock__c.object-meta.xml
<CustomObject>
    <description>Stock used as payment.</description>
    <label>Stock</label>
    <nameField>
        <label>Stock Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>