force-app/main/default/objects/ucinn_ascendv2__Stock__c/fields/ucinn_ascendv2__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Company_Name__c</fullName>
    <label>Company / Fund Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>