force-app/main/default/objects/ucinn_ascendv2__Stock__c/fields/ucinn_ascendv2__Low_Value_on_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Low_Value_on_Date__c</fullName>
    <label>Low Value on Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>