force-app/main/default/objects/ucinn_ascendv2__Stock__c/fields/ucinn_ascendv2__Number_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Shares__c</fullName>
    <label>Number of Shares</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>