force-app/main/default/objects/ucinn_ascendv2__Stock__c/fields/ucinn_ascendv2__Payment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment (DEPRECATED)</label>
    <referenceTo>ucinn_ascendv2__Payment__c</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>