force-app/main/default/objects/ucinn_ascendv2__Stock__c/fields/ucinn_ascendv2__Received_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Received_Date__c</fullName>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>