force-app/main/default/objects/ucinn_ascendv2__Stock__c/fields/ucinn_ascendv2__Stock_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Stock_Name_Auto_Number__c</fullName>
    <displayFormat>STK-{YY}{MM}{DD}-{0000}</displayFormat>
    <label>Stock Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>