force-app/main/default/objects/ucinn_ascendv2__Stock__c/fields/ucinn_ascendv2__Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Ticker_Symbol__c</fullName>
    <label>Ticker Symbol</label>
    <length>10</length>
    <type>Text</type>
</CustomField>